--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "license": "MIT",
   "homepage": "https://github.com/choffmeister/Paw-JsonWebTokenDynamicValue",
   "dependencies": {
-    "babel-plugin-transform-flow-strip-types": "6.7.0",
-    "babel-polyfill": "6.6.1",
-    "babel-runtime": "6.6.1",
-    "jsrsasign": "5.0.7"
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
+    "jsrsasign": "^8.0.3"
   },
   "devDependencies": {
-    "babel-core": "6.7.0",
-    "babel-loader": "6.2.4",
-    "babel-plugin-rewire": "1.0.0-beta-3",
-    "babel-plugin-transform-decorators": "6.6.5",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-rewire": "^1.1.0",
+    "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-runtime": "6.6.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-preset-stage-1": "6.5.0",
-    "babel-preset-stage-2": "6.5.0",
-    "babel-preset-stage-3": "6.5.0",
-    "babel-register": "6.6.5",
-    "chai": "3.5.0",
-    "mocha": "2.4.5",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.24.1",
+    "chai": "4.1.0",
+    "mocha": "3.4.2",
     "path": "0.12.7",
-    "webpack": "1.12.14"
+    "webpack": "3.3.0"
   },
   "scripts": {
     "build": "rm -rf dist/ && BUILD_ENV=build ./node_modules/.bin/webpack --bail --display-error-details",
@@ -37,6 +37,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:choffmeister/Paw-JsonWebTokenDynamicValue.git"
+    "url": "git@github.com:nihar/Paw-JsonWebTokenDynamicValue.git"
   }
 }
